# ktrlabs-claude-plugins

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: record-clean.md  record-doctor.md  record-setup.md  record-status.md
docs/superpowers/plans/: 2026-04-18-claude-code-recorder.md
docs/superpowers/postmortems/: 2026-04-18-real-world-bugs.md
hooks/: session-start.sh
plugins/claude-code-recorder/: .gitignore  BACKLOG.md  README.md  pyproject.toml
plugins/claude-code-recorder/.claude-plugin/: plugin.json
plugins/claude-code-recorder/commands/: record-cancel.md  record-pause.md  record.md
plugins/claude-code-recorder/docs/superpowers/postmortems/: 2026-04-18-real-world-bugs.md
plugins/claude-code-recorder/docs/superpowers/specs/: 2026-04-18-claude-code-recorder-design.md
plugins/claude-code-recorder/tests/: conftest.py  test_bootstrap.py  test_bootstrap_manifest.py  test_cancel_cli.py  test_clean_cli.py  test_devices.py  test_extract_frames.py  test_paths.py  test_pause_resume.py  test_record_cli.py  test_record_toggle_start.py  test_record_toggle_stop.py  test_slug.py  test_status_cli.py  test_transcribe.py
tests/: conftest.py  test_assemble.py  test_doctor_cli.py  test_extract_frames.py  test_setup_cli.py  test_state.py
