[project]
name = "claude-code-recorder"
version = "0.1.0"
description = "CC plugin that turns narrated screen demos into prompts"
requires-python = ">=3.11"
dependencies = [
    "imagehash>=4.3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring real whisper model (skipped by default)",
]
addopts = "-m 'not e2e'"
timeout = 30

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
